# cookiecutter-behave-selenium

./: .gitignore  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_name}}_bdd/: .gitignore  README.md  behave.ini  cookiecutter.json  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}_bdd/features/: environment.py  feature_name.feature
{{cookiecutter.project_name}}_bdd/features/steps/: step_name.py
{{cookiecutter.project_name}}_bdd/support/: assistant.py  driver_factory.py
{{cookiecutter.project_name}}_bdd/support/core/: element_action.py
{{cookiecutter.project_name}}_bdd/support/locators/: base_page.py
{{cookiecutter.project_name}}_bdd/support/page_actions/: base_page.py
{{cookiecutter.project_name}}_bdd/utils/: assert_utils.py  constants.py  logging.json
