[tool.poetry]
name = "template-behave-selenium"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
behave = "^1.2.6"
PyHamcrest = "^2.0.2"
webdriver-manager = "^3.4.2"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
