[tool.poetry]
name = "behave-selenium-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
behave = "^1.2.6"
PyHamcrest = "^2.0.2"
webdriver-manager = "^3.4.2"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "^21.6b0"
isort = "^5.9.1"
pycodestyle = "^2.7.0"
pylava = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
profile = "black"
